--- a/1.0/en/kap-orgusu/konumlama.html
+++ b/1.0/en/kap-orgusu/konumlama.html
@@ -7,7 +7,7 @@ title: Positioning - Grid System
     Now you have more options to position. You can do things like "Left, origin, right, left top, top, top right, left bottom, bottom, bottom right and baseline". You can also define offsets and move away from one side.
   </p>
 
-  <h3>Positioning: f, ft, t, th, h, bh, b, lb, g</h3>
+  <h3>Positioning: f, ft, t, th, h, bh, b, fb, g</h3>
   <p>
     The parameters f, ft, t, th, h, bh, b, fb, g are used to position the contents on either side. The meanings of the parameters are described more clearly below. The f, t, g, b, h on the keyboard are determined by the physical location of the letters.
   </p>
