--- a/1.0/en/kap-orgusu/konumlama.html
+++ b/1.0/en/kap-orgusu/konumlama.html
@@ -101,7 +101,7 @@ title: Positioning - Grid System
     <h3>Preview</h3>
     <div class="önizleme">
       <div style="height:150px;">
-        <div data-gnl="3 10p _f">_f: Top itself</div>
+        <div data-gnl="3 10p _t">_t: Top itself</div>
         <div data-gnl="3 10p _g">_g: oriGin itself</div>
         <div data-gnl="3 10p _b">_b: Bottom itself</div>
       </div>
@@ -141,18 +141,18 @@ title: Positioning - Grid System
     </div>
   {% endhighlight %}
 
-  <h3>Positioning: <span data-metin="dikkat">left|right-NUMBER NUMBERp-offset</span></h3>
+  <h3>Positioning: <span data-metin="dikkat">left|right-NUMBER NUMBERp-spacing</span></h3>
   <p>
-    If we want to offset an item relative to the left or right piece layout, we use this positioning feature. If you use it without changing the piece scale, it is enough to write left | right-NUMBER.
+    If we want to spacing an item relative to the left or right piece layout, we use this positioning feature. If you use it without changing the piece scale, it is enough to write left | right-NUMBER.
   </p>
   <div class="örnek">
     <h3>Preview</h3>
     <div class="önizleme">
-      <div data-gnl="1 3p left-1 6p-offset">
-        1 3p left-1 6p-offset
+      <div data-gnl="1 3p left-1 6p-spacing">
+        1 3p left-1 6p-spacing
       </div>
-      <div data-gnl="1 3p left-2 19p-offset">
-        1 3p left-2 19p-offset
+      <div data-gnl="1 3p left-2 19p-spacing">
+        1 3p left-2 19p-spacing
       </div>
       <div data-gnl="1 3p right-2">
         1 3p right-2
@@ -163,11 +163,11 @@ title: Positioning - Grid System
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 3p left-1 6p-offset">
-      1 3p left-1 6p-offset
+    <div data-gnl="1 3p left-1 6p-spacing">
+      1 3p left-1 6p-spacing
     </div>
-    <div data-gnl="1 3p left-2 19p-offset">
-      1 3p left-2 19p-offset
+    <div data-gnl="1 3p left-2 19p-spacing">
+      1 3p left-2 19p-spacing
     </div>
     <div data-gnl="1 3p right-2">
       1 3p right-2
