--- a/temalar/sosero2/html/haberler.html
+++ b/temalar/sosero2/html/haberler.html
@@ -2,7 +2,7 @@
   <a class="logo" href="#">
     <img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO">
   </a>
-  <h1 class="product-name" data-ort="1 3p _t küçükleri-gizle">HABERLER</h1>
+  <h1 class="product-name" data-md="1 3p _t hide-smaller">HABERLER</h1>
   <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
   <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
     <img src="/temalar/sosero/assets/img/menu/hamburger.svg" alt="">
@@ -11,11 +11,11 @@
     <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
   </label>
 </header>
-<main data-gnl="sığ">
+<main data-gnl="fit">
   <div  class="news-slider slider">
-      <article class="product" data-gnl="1 1p" data-byk="1 2p">
+      <article class="product" data-gnl="1 1p" data-lg="1 2p">
         <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
+        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
           <div data-gnl="1 1p kaymadan" style="height: 200px;">
             <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
@@ -29,16 +29,16 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller sağda">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="1 1p" data-byk="1 2p">
+      <article class="product" data-gnl="1 1p" data-lg="1 2p">
         <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
+        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
           <div data-gnl="1 1p kaymadan" style="height: 200px;">
             <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
@@ -52,16 +52,16 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller sağda">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="1 1p" data-byk="1 2p">
+      <article class="product" data-gnl="1 1p" data-lg="1 2p">
         <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
+        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
           <div data-gnl="1 1p kaymadan" style="height: 200px;">
             <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
@@ -75,16 +75,16 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller sağda">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="1 1p" data-byk="1 2p">
+      <article class="product" data-gnl="1 1p" data-lg="1 2p">
         <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
+        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
           <div data-gnl="1 1p kaymadan" style="height: 200px;">
             <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
@@ -98,16 +98,16 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller sağda">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="1 1p" data-byk="1 2p">
+      <article class="product" data-gnl="1 1p" data-lg="1 2p">
         <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-byk="22 23p">
+        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
           <div data-gnl="1 1p kaymadan" style="height: 200px;">
             <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
@@ -121,7 +121,7 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-byk="1 23p küçükleri-gizle sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller sağda">
           <div class="kesit">
 
           </div>
