--- a/temalar/sosero2/html/index.html
+++ b/temalar/sosero2/html/index.html
@@ -18,12 +18,12 @@
 
 </head>
 <body data-gnl="tamekran">
-  <div data-gnl="sığ t">
+  <div data-gnl="fit t">
     <header data-gnl="0 o" style="position:absolute; z-index:999;">
       <a class="logo" href="#" style="width:auto;"><img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO"></a>
     </header>
-    <div class="main" data-gnl="1g 1nc o sığ" data-kçk="kaymadan">
-      <div data-gnl="sütun sığ dürmeden a" style="text-align:center; align-items:center; justify-items: flex-end;">
+    <div class="main" data-gnl="1g 1nc o fit" data-sm="kaymadan">
+      <div data-gnl="sütun fit dürmeden a" style="text-align:center; align-items:center; justify-items: flex-end;">
   <img src="/temalar/sosero2/assets/img/ögeler.png" alt="" style="max-height:70vh;">
 
   <a class="intro-text" href="urunler.html" style="padding:20px;">
