--- a/temalar/sosero2/html/satisnoktalari.html
+++ b/temalar/sosero2/html/satisnoktalari.html
@@ -1,5 +1,5 @@
-<div data-kçk="sığ kaymadan">
-  <div id="map" data-gnl="sığ"></div>
+<div data-sm="fit kaymadan">
+  <div id="map" data-gnl="fit"></div>
   <script>
 
         function initMap() {
