--- a/temalar/sosero2/html/site.html
+++ b/temalar/sosero2/html/site.html
@@ -7,7 +7,8 @@
     <title> SOSERO ÜRÜNLER</title>
 
     <!-- Kök -->
-    <link href="/temalar/sosero2/assets/css/deveb.css" rel="stylesheet">
+    <link href="/assets/deveb-s1n0/deveb-en.css" rel="stylesheet">
+    <link href="/assets/deveb-s1n0/css/deveb.css" rel="stylesheet">
     <link href="/temalar/sosero2/assets/css/sosero.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -128,16 +129,16 @@
 
 </style>
   </head>
-<body data-gnl="tamekran">
+<body data-gnl="fullscreen">
 
-  <div data-gnl="sığ">
+  <div data-gnl="fit">
 
-    <div data-gnl="lt" data-byk="1g sütun kaymadan">
+    <div data-gnl="lt" data-lg="1g col no-overflow">
 
-        <div id="content" data-byk="sığ"></div>        
+        <div id="content" data-lg="fit"></div>        
 
         <footer data-gnl="0">
-          <nav data-gnl="_a">
+          <nav data-gnl="_b">
             <ul data-menü="basit yatay">
               <li><a href="#"><img src="/temalar/sosero2/assets/img/sosyal/fb.svg" alt=""></a></li>
               <li><a href="#"><img src="/temalar/sosero2/assets/img/sosyal/ig.svg" alt=""></a></li>
@@ -150,15 +151,15 @@
     
     <div data-gnl="0">
       <nav class="dallık">
-        <input id="menü-ana" name="ana-menü" data-kapaç="çaprazlama gizle" type="radio">
-        <label for="menü-ana">•••</label>
-        <label for="menü-ana-çapraz">✕</label>
+        <input id="menu" name="mainmenu" data-kapaç="çaprazlama gizle" type="radio">
+        <label for="menu">•••</label>
+        <label for="menu-crossmain">✕</label>
         <ul data-menü="dikey sağ-kaval">
-          <li data-byk="gizle" style="margin-bottom:20px;">
+          <li data-lg="hide" style="margin-bottom:20px;">
             <a class="baş" data-gnl="0 üstte-ol" style="padding:0 10px;" href="#">
               <img style="width:100px; height:auto;" src="/temalar/sosero/assets/img/sosero.png" alt="SOSERO">
             </a>
-            <label for="menü-ana-çapraz" onclick="document.body.classList.remove('gelgit-etkin');">
+            <label for="menu-crossmain" onclick="document.body.classList.remove('gelgit-etkin');">
               <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
             </label>
           </li>
