--- a/temalar/sosero2/html/tarifler.html
+++ b/temalar/sosero2/html/tarifler.html
@@ -1,11 +1,11 @@
 
-<div data-byk="sığ">
-  <div data-byk="1 2p lt sığ sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/domates_corbasi.jpg') no-repeat center center;background-size:cover;">
+<div data-lg="fit">
+  <div data-lg="1 2p lt fit col no-overflow" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/domates_corbasi.jpg') no-repeat center center;background-size:cover;">
 
-    <header data-gnl="23 24p" data-byk="0" style="position:absolute; z-index:999;">
+    <header data-gnl="23 24p" data-lg="0" style="position:absolute; z-index:999;">
       <a class="logo" href="#"><img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO"></a>
-      <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
-      <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
+      <input id="menu-crossmain" checked="" name="mainmenu" data-kapaç="sağda çaprazlama" type="radio">
+      <label for="mainmenu" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
         <img src="/temalar/sosero2/assets/img/menu/hamburger.svg" alt="">
       </label>
       <label for="menü-ana-çapraz">
@@ -14,8 +14,8 @@
     </header>
 
   </div>
-  <div data-byk="1 2p sığ">
-    <div data-gnl="22 24p soldan-1 24p-aralık" data-byk="18 24p">
+  <div data-lg="1 2p fit">
+    <div data-gnl="22 24p left-1 24p-spacing" data-lg="18 24p">
       <article class="yemek regular2 slider">
             <div>
               <h1 class="yemek-adi">DOMATES ÇORBASI</h1>
