--- a/temalar/sosero2/html/urun.html
+++ b/temalar/sosero2/html/urun.html
@@ -2,7 +2,7 @@
   <a class="logo" href="#">
     <img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO">
   </a>
-  <h1 class="product-name" data-ort="1 3p _t küçükleri-gizle">ÜRÜN</h1>
+  <h1 class="product-name" data-md="1 3p _t hide-smaller">ÜRÜN</h1>
   <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
   <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
     <img src="/temalar/sosero/assets/img/menu/hamburger.svg" alt="">
@@ -11,13 +11,13 @@
     <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
   </label>
 </header>
-<main data-gnl="sığ">
+<main data-gnl="fit">
 <article class="product detail" data-gnl="araları-aralık">
-  <div class="product-content" data-gnl="1 1p kaymadan" data-kçk="sığdır">
-    <div data-kçk="1 2p sığ sütun o kaymadan">
+  <div class="product-content" data-gnl="1 1p kaymadan" data-sm="fitdır">
+    <div data-sm="1 2p fit sütun o kaymadan">
       <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
     </div>
-    <div data-gnl="o" data-kçk="1 2p sığ" style="background-color:#ffc900;">
+    <div data-gnl="o" data-sm="1 2p fit" style="background-color:#ffc900;">
       <div data-gnl="11 12p üstte" style="padding-bottom:40px;">
         <h1>Közlenmiş Biber</h1>
         <p>
