--- a/temalar/sosero2/html/urunler.html
+++ b/temalar/sosero2/html/urunler.html
@@ -2,7 +2,7 @@
 	<a class="logo" href="#">
 		<img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO">
 	</a>
-	<h1 class="product-name" data-ort="1 3p _t küçükleri-gizle">ÜRÜNLER</h1>
+	<h1 class="product-name" data-md="1 3p _t hide-smaller">ÜRÜNLER</h1>
 	<input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
   <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
     <img src="/temalar/sosero/assets/img/menu/hamburger.svg" alt="">
@@ -11,7 +11,7 @@
     <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
   </label>
 </header>
-<main data-gnl="sığ">
+<main data-gnl="fit">
  <section class="regular slider">
 
   <a href="/temalar/sosero2/paketler.html" class="product-card">
