--- a/temalar/sosero2/html/haber.html
+++ b/temalar/sosero2/html/haber.html
@@ -2,7 +2,7 @@
   <a class="logo" href="#">
     <img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO">
   </a>
-  <h1 class="product-name" data-ort="1 3p _t küçükleri-gizle">HABERLER</h1>
+  <h1 class="product-name" data-md="1 3p _t hide-smaller">HABERLER</h1>
   <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
   <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
     <img src="/temalar/sosero/assets/img/menu/hamburger.svg" alt="">
@@ -11,14 +11,14 @@
     <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
   </label>
 </header>
-<main data-gnl="sığ" style="padding-bottom: 20px; padding-top: 20px;">
-      <div data-gnl="ortada sığ">
+<main data-gnl="fit" style="padding-bottom: 20px; padding-top: 20px;">
+      <div data-gnl="o fit">
           <article class="product full-detail product-content" data-gnl="sütun">
-            <div class="" data-byk="sığ kaymadan">
-              <div data-byk="1 2p sığ sütun o kaymadan">
+            <div class="" data-lg="fit kaymadan">
+              <div data-lg="1 2p fit sütun o kaymadan">
                 <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
               </div>
-              <div class="content" data-gnl="t" data-byk="1 2p sığ">
+              <div class="content" data-gnl="t" data-lg="1 2p fit">
                   <span class="date">Nisan 21, 2018</span>
                   <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
                   <p>
