--- a/temalar/sosero2/html/hakkimizda.html
+++ b/temalar/sosero2/html/hakkimizda.html
@@ -1,7 +1,7 @@
-<div data-byk="sığ">
-  <div data-byk="1 2p lt sığ sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
+<div data-lg="fit">
+  <div data-lg="1 2p lt fit sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
 
-    <header data-gnl="23 24p" data-byk="0" style="position:absolute; z-index:999;">
+    <header data-gnl="23 24p" data-lg="0" style="position:absolute; z-index:999;">
       <a class="logo" href="#"><img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO"></a>
       <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
       <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
@@ -13,8 +13,8 @@
     </header>
 
   </div>
-  <div data-byk="1 2p sığ">
-    <div data-gnl="22 24p soldan-1 24p-aralık" data-byk="18 24p">
+  <div data-lg="1 2p fit">
+    <div data-gnl="22 24p soldan-1 24p-aralık" data-lg="18 24p">
     <article class="yemek">
       <h1 class="yemek-adi">HAKKIMIZDA</h1>
       <div class="yemek-içeriği">
