--- a/temalar/sosero2/html/iletisim.html
+++ b/temalar/sosero2/html/iletisim.html
@@ -1,7 +1,7 @@
-<div data-byk="sığ">
-  <div data-byk="1 2p lt sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
+<div data-lg="fit">
+  <div data-lg="1 2p lt sütun kaymadan" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/üretim_tesisleri.jpg') no-repeat center center;background-size:cover;">
 
-    <header data-gnl="23 24p" data-byk="0" style="position:absolute; z-index:999;">
+    <header data-gnl="23 24p" data-lg="0" style="position:absolute; z-index:999;">
       <a class="logo" href="#"><img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO"></a>
       <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
       <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
@@ -13,8 +13,8 @@
     </header>
 
   </div>
-  <div data-byk="1 2p sığ">
-    <div data-gnl="22 24p soldan-1 24p-aralık" data-byk="18 24p">
+  <div data-lg="1 2p fit">
+    <div data-gnl="22 24p soldan-1 24p-aralık" data-lg="18 24p">
     <article class="yemek" style="width:100%;">
       <h1 class="yemek-adi">İLETİŞİM</h1>
       <div class="yemek-içeriği" data-gnl="1 1p">
@@ -43,12 +43,12 @@
                               <button type="button" class="button"><span>GÖNDER</span></button>
                             </div>
 
-                            <div data-gnl="1 1p üstte" data-kçk="3 8p sağdan-1 8p-aralık">
+                            <div data-gnl="1 1p üstte" data-sm="3 8p sağdan-1 8p-aralık">
                               <h3 style="color:#c70000; font-size:16px; font-weight:bold;">Ulaşım Bilgileri:</h3>
                               <p>Yöre Grup Genel Merkez Osman Mahallesi. 641 Sokak No:14</p>
                               <p>Gebze / KOCAELİ</p>
                             </div>
-                            <div data-gnl="1 1p üstte" data-kçk="3 8p sağdan-1 8p-aralık">
+                            <div data-gnl="1 1p üstte" data-sm="3 8p sağdan-1 8p-aralık">
                               <h3 style="color:#c70000; font-size:16px; font-weight:bold;">İletişim Bilgileri:</h3>
                               <p>
                                 Telefon: 0262 643 90 70
