--- a/temalar/sosero2/html/urunler.html
+++ b/temalar/sosero2/html/urunler.html
@@ -14,7 +14,7 @@
 <main data-gnl="fit">
  <section class="regular slider">
 
-  <a href="/temalar/sosero2/paketler.html" class="product-card">
+  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -29,7 +29,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" class="product-card">
+  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -44,7 +44,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" class="product-card">
+  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -59,7 +59,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" class="product-card">
+  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -74,7 +74,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" class="product-card">
+  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -89,7 +89,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" class="product-card">
+  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -104,7 +104,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" class="product-card">
+  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
