--- a/temalar/sosero2/html/urunler.html
+++ b/temalar/sosero2/html/urunler.html
@@ -5,16 +5,16 @@
 	<h1 class="product-name" data-md="1 3p _t hide-smaller">ÜRÜNLER</h1>
 	<input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
   <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
-    <img src="/temalar/sosero/assets/img/menu/hamburger.svg" alt="">
+    <img src="/temalar/sosero2/assets/img/menu/hamburger.svg" alt="">
   </label>
   <label for="menü-ana-çapraz">
-    <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
+    <img src="/temalar/sosero2/assets/img/menu/hamburger-x.svg" alt="">
   </label>
 </header>
 <main data-gnl="fit">
  <section class="regular slider">
 
-  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
+  <a href="paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -29,7 +29,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
+  <a href="paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -44,7 +44,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
+  <a href="paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -59,7 +59,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
+  <a href="paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -74,7 +74,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
+  <a href="paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -89,7 +89,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
+  <a href="paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
@@ -104,7 +104,7 @@
       </div>
     </div>
   </a>
-  <a href="/temalar/sosero2/paketler.html" data-ajax-getir="1" class="product-card">
+  <a href="paketler.html" data-ajax-getir="1" class="product-card">
     <div class="product-img">
       <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
     </div>
