--- a/temalar/sosero3/html/paketler.html
+++ b/temalar/sosero3/html/paketler.html
@@ -14,7 +14,6 @@
   </header>
   <main data-gnl="fit">
    <section class="regular slider paket">
-    {% for num in (1..20) %}
     <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
       <div class="product-img">
         <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
@@ -29,7 +28,230 @@
         </div>
       </div>
     </a>
-    {% endfor %}
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
+    <a href="/temalar/sosero2/urun.html" class="product-card beyaz">
+      <div class="product-img">
+        <img src="/temalar/sosero2/assets/img/ege_zeytin_yagli.png" alt="">
+      </div>
+      <div class="product-info" data-gnl="1 1p">
+        <div data-gnl="1g">
+          <h2>AKDENİZ SALATASI</h2>
+          <p>ZEYTİN EZMESİ</p>
+        </div>
+        <div class="open-it" data-gnl="0 göbekte-ol">
+          +
+        </div>
+      </div>
+    </a>
     </section>
   </main>
 </div>
