--- a/temalar/sosero3/html/paketler.html
+++ b/temalar/sosero3/html/paketler.html
@@ -255,3 +255,53 @@
     </section>
   </main>
 </div>
+<section>
+  <script type="text/javascript">
+    window.sosero = function () {
+      $('.regular').slick({
+        dots: true,
+        infinite: false,
+        speed: 300,
+        slidesToShow: 5,
+        slidesToScroll: 5,
+          responsive: [
+            {
+            breakpoint: 1600,
+              settings: {
+                slidesToShow: 4,
+                slidesToScroll: 4,
+                infinite: true,
+                dots: true
+              }
+            },
+            {
+            breakpoint: 1024,
+              settings: {
+                slidesToShow: 3,
+                slidesToScroll: 3,
+                infinite: true,
+                dots: true
+              }
+            },
+            {
+            breakpoint: 600,
+              settings: {
+                slidesToShow: 2,
+                slidesToScroll: 2
+              }
+            },
+            {
+            breakpoint: 480,
+              settings: {
+                slidesToShow: 1,
+                slidesToScroll: 1
+              }
+            }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+          ]
+      });      
+    }
+  </script>
+</section>
