--- a/temalar/sosero3/html/tarifler.html
+++ b/temalar/sosero3/html/tarifler.html
@@ -1,15 +1,15 @@
 
 <div data-lg="fit">
-  <div data-lg="1 2p lt fit col no-overflow" style="min-height: 200px; background: url('/temalar/sosero2/assets/img/domates_corbasi.jpg') no-repeat center center;background-size:cover;">
+  <div data-lg="1 2p ft fit col no-overflow" style="min-height: 200px; background: url('/temalar/sosero3/assets/img/domates_corbasi.jpg') no-repeat center center; background-size:cover;">
 
-    <header data-gnl="23 24p" data-lg="0" style="position:absolute; z-index:999;">
-      <a class="logo" href="#"><img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO"></a>
+    <header data-gnl="23 24p" data-lg="0" >
+      <a class="logo" href="#"><img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO"></a>
       <input id="menu-crossmain" checked="" name="mainmenu" data-kapaç="sağda çaprazlama" type="radio">
       <label for="mainmenu" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
-        <img src="/temalar/sosero2/assets/img/menu/hamburger.svg" alt="">
+        <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
       </label>
       <label for="menü-ana-çapraz">
-        <img src="/temalar/sosero2/assets/img/menu/hamburger-x.svg" alt="">
+        <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
       </label>
     </header>
 
@@ -136,5 +136,4 @@
         slidesToScroll: 1
       });     
     }
-  </script>
-</section>
+</script>
