--- a/temalar/sosero3/html/haberler.html
+++ b/temalar/sosero3/html/haberler.html
@@ -1,25 +1,25 @@
 <header data-gnl="_t">
   <a class="logo" href="#">
-    <img src="/temalar/sosero2/assets/img/sosero.png" alt="SOSERO">
+    <img src="/temalar/sosero3/assets/img/sosero.png" alt="SOSERO">
   </a>
   <h1 class="product-name" data-md="1 3p _t hide-smaller">HABERLER</h1>
   <input id="menü-ana-çapraz" checked="" name="ana-menü" data-kapaç="sağda çaprazlama" type="radio">
   <label for="menü-ana" onclick="document.body.classList.add('gelgit-etkin');" style="margin-bottom:10px;height:41px; width:41px;">
-    <img src="/temalar/sosero/assets/img/menu/hamburger.svg" alt="">
+    <img src="/temalar/sosero3/assets/img/menu/hamburger.svg" alt="">
   </label>
   <label for="menü-ana-çapraz">
-    <img src="/temalar/sosero/assets/img/menu/hamburger-x.svg" alt="">
+    <img src="/temalar/sosero3/assets/img/menu/hamburger-x.svg" alt="">
   </label>
 </header>
 <main data-gnl="fit">
   <div  class="news-slider slider">
-      <article class="product" data-gnl="1 1p" data-lg="1 2p">
-        <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
-          <div data-gnl="1 1p kaymadan" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
-          <div class="product-content-alt" data-gnl="1 1p üstte">
+          <div class="product-content-alt" data-gnl="t">
               <span class="date">Nisan 21, 2018</span>
               <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
               <p>
@@ -29,20 +29,20 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="1 1p" data-lg="1 2p">
-        <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
-          <div data-gnl="1 1p kaymadan" style="height: 200px;">
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
             <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
-          <div class="product-content-alt" data-gnl="1 1p üstte">
+          <div class="product-content-alt" data-gnl="t">
               <span class="date">Nisan 21, 2018</span>
               <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
               <p>
@@ -52,20 +52,20 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="1 1p" data-lg="1 2p">
-        <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
-          <div data-gnl="1 1p kaymadan" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
-          <div class="product-content-alt" data-gnl="1 1p üstte">
+          <div class="product-content-alt" data-gnl="t">
               <span class="date">Nisan 21, 2018</span>
               <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
               <p>
@@ -75,20 +75,20 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="1 1p" data-lg="1 2p">
-        <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
-          <div data-gnl="1 1p kaymadan" style="height: 200px;">
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
             <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
-          <div class="product-content-alt" data-gnl="1 1p üstte">
+          <div class="product-content-alt" data-gnl="t">
               <span class="date">Nisan 21, 2018</span>
               <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
               <p>
@@ -98,20 +98,20 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-      <article class="product" data-gnl="1 1p" data-lg="1 2p">
-        <a href="/temalar/sosero2/haber.html">
-        <div class="product-content" data-gnl="1 1p kaymadan sağda-ol" data-lg="22 23p">
-          <div data-gnl="1 1p kaymadan" style="height: 200px;">
-            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
           </div>
-          <div class="product-content-alt" data-gnl="1 1p üstte">
+          <div class="product-content-alt" data-gnl="t">
               <span class="date">Nisan 21, 2018</span>
               <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
               <p>
@@ -121,15 +121,61 @@
               </p>
           </div>
         </div>
-        <div class="kesme" data-lg="1 23p hide-smaller sağda">
+        <div class="kesme" data-lg="1 23p hide-smaller h">
           <div class="kesit">
 
           </div>
         </div>
         </a>
       </article>
-  </div>
-</main>
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero2/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller h">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+      <article class="product" data-gnl="" data-lg="1 2p">
+        <a href="/temalar/sosero3/haber.html">
+        <div class="product-content" data-gnl="no-overflow _h" data-lg="22 23p">
+          <div data-gnl="no-overflow" style="height: 200px;">
+            <img class="tam" src="/temalar/sosero3/assets/img/kozlenmis_biber.jpg" alt="Üretim Tesisleri">
+          </div>
+          <div class="product-content-alt" data-gnl="t">
+              <span class="date">Nisan 21, 2018</span>
+              <h1>Peynirci Baba'nın Online Sayış Sitesi Açıldı</h1>
+              <p>
+                Peynirci Baba’nın yöresel kahvaltılık ürünlerini satın almak
+                istiyorsanız, artık çok kolay bir yolunuz var. Peynirci Baba’nın
+                online satış sitesi www.yorenizinlezzeti.com hizmete açıldı.
+              </p>
+          </div>
+        </div>
+        <div class="kesme" data-lg="1 23p hide-smaller h">
+          <div class="kesit">
+
+          </div>
+        </div>
+        </a>
+      </article>
+    </div>
+  </main>
 <section>
   <script type="text/javascript">
     window.sosero = function () {
